--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <header>
     <nav>
-      <img src="./images/logo.svg" alt="">
+      <img src="./images/logo.svg" alt="company logo">
       <ul>
         <li>Product</li>
         <li>Features</li>
@@ -38,7 +38,7 @@
       </ul>
     </nav>
     <div id="menu_toggle" onclick="toggleMenu()">
-      <img id="toggle_icon" src="./images/icon-hamburger.svg">
+      <img id="toggle_icon" src="./images/icon-hamburger.svg" alt="toggle menu">
     </div>
   </header>
 
@@ -52,7 +52,7 @@
 
       <button>Schedule a demo</button><span class="grey see">to see a preview</span>
     </article>
-    <div id="image"><img src="./images/illustration-devices.svg" alt=""></div>
+    <div id="image"><img src="./images/illustration-devices.svg" alt="mobile laptop"></div>
   </section>
 
   <footer>
